# OyNIx

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  install.sh  oynix-launch.vbs  oynix.desktop  pyproject.toml  requirements.txt  run.sh
.github/workflows/: build.yml
core/OyNIx.Core/: OyNIx.Core.csproj
core/OyNIx.Core/AI/: AiEngine.cs
core/OyNIx.Core/Crawler/: WebCrawler.cs
core/OyNIx.Core/Data/: BookmarkStore.cs  CredentialStore.cs  HistoryStore.cs  ProfileManager.cs  SessionStore.cs  SiteDatabase.cs
core/OyNIx.Core/Extensions/: ExtensionRegistry.cs
core/OyNIx.Core/GitHub/: GitHubSync.cs
core/OyNIx.Core/Import/: ChromeImporter.cs  NydtaArchive.cs
core/OyNIx.Core/Interop/: NativeExports.cs
core/OyNIx.Core/Search/: SearchEngine.cs
core/OyNIx.Core/Security/: SecurityChecker.cs
data/: community.jsonl
database/community/: README.md
debian/: bundle-qt.sh  changelog  control  copyright  oynix.desktop  oynix.lintian-overrides  oynix.wrapper  postinst  postrm  rules
docs/: index.html
flatpak/: io.github.oynix.browser.metainfo.xml  io.github.oynix.browser.yml  oynix-launch
installer/windows/: oynix-installer.nsi
legacy/: build-flatpak.sh  oynix-launch.bat  search_index.json  unseen_sites.json
legacy/core/: oynixcore__init__.py
legacy/oynix/: __init__.py  __main__.py  oynix.py
legacy/oynix/UI/: bookmarks.py  downloads.py  menus.py  settings.py
legacy/oynix/core/: ai_manager.py  browser.py  database.py  extensions.py  search_engine_v2.py  security.py
legacy/oynix/utils/: __init__(2).py  helpers.py
oynix/: __main__.py  oynix.py
oynix/UI/: __init__.py  ai_chat.py  command_palette.py  icons.py  menus.py  npi_builder.py  settings.py
oynix/core/: ai_manager.py  audio_player.py  browser.py  chrome_import.py  credentials.py  database.py  extensions.py  github_sync.py  native_bridge.py  nydta.py  nyx_search.py  profiles.py  search_builder.py  theme_engine.py  tree_tabs.py  turbo_index.py
oynix/utils/: __init__.py  helpers.py  logger.py
resources/: oynix.desktop  oynix.qrc
scripts/: build-deb.sh  build-flatpak.sh  build-pacman.sh  build-ubuntu.sh  build-windows.ps1  oynix-cli
src/: launcher.c  launcher.cpp  main.cpp
src/ai/: AiChatPanel.cpp  AiChatPanel.h  AiManager.cpp  AiManager.h
src/core/: BrowserWindow.cpp  BrowserWindow.h  FindBar.cpp  FindBar.h  TabWidget.cpp  TabWidget.h  UrlBar.cpp  UrlBar.h  WebPage.cpp  WebPage.h  WebView.cpp  WebView.h
src/data/: BookmarkManager.cpp  BookmarkManager.h  ChromeImport.cpp  ChromeImport.h  CommunityDbSync.cpp  CommunityDbSync.h  CredentialManager.cpp  CredentialManager.h  Database.cpp  Database.h  HistoryManager.cpp  HistoryManager.h  NydtaFormat.cpp  NydtaFormat.h  ProfileManager.cpp  ProfileManager.h  SessionManager.cpp  SessionManager.h  WebCache.cpp  WebCache.h
src/extensions/: ExtensionBridge.cpp  ExtensionBridge.h  ExtensionManager.cpp  ExtensionManager.h  NpiCompiler.cpp  NpiCompiler.h
src/interop/: CoreBridge.cpp  CoreBridge.h
src/media/: AudioPlayer.cpp  AudioPlayer.h
src/native/: fast_index.cpp  turbo_index.cpp
src/pages/: InternalPages.cpp  InternalPages.h
src/search/: CrabCrawler.cpp  CrabCrawler.h  NyxSearch.cpp  NyxSearch.h  SearchEngineBuilder.cpp  SearchEngineBuilder.h  WebCrawler.cpp  WebCrawler.h  WebResultsFetcher.cpp  WebResultsFetcher.h
src/security/: SecurityManager.cpp  SecurityManager.h
src/sync/: GitHubSync.cpp  GitHubSync.h
src/theme/: ThemeEngine.cpp  ThemeEngine.h
src/turbo_indexer/: IndexPipeline.cs  NativeIndexer.cs  Program.cs  TurboIndexer.csproj
src/ui/: BookmarkPanel.cpp  BookmarkPanel.h  CommandPalette.cpp  CommandPalette.h  CrabPanel.cpp  CrabPanel.h  CrawlerPanel.cpp  CrawlerPanel.h  DownloadManager.cpp  DownloadManager.h  ExtensionPanel.cpp  ExtensionPanel.h  SettingsDialog.cpp  SettingsDialog.h  TreeTabSidebar.cpp  TreeTabSidebar.h
themes/: nyx-amethyst.css  nyx-ember.css  nyx-midnight.css  nyx-violet.css  nyx.css
