[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oynix"
version = "2.3.0"
description = "Nyx-themed desktop browser with local AI assistant"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.5.0",
    "PyQt6-WebEngine>=6.5.0",
    "llama-cpp-python>=0.2.0",
    "huggingface-hub>=0.20.0",
    "whoosh>=2.7.4",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "Pillow>=10.0.0",
]

[project.scripts]
oynix = "oynix.oynix:main"

[tool.setuptools.packages.find]
include = ["oynix*"]
